# C_Projects

./: CMakeLists.txt  README.md  rpi.sh  toolchain-arm.cmake  toolchain-rpi.cmake  toolchain-rpi_PhBe.cmake
model/published/coater/: Coater.Classes.cs  Coater.Constants.cs  Coater.DataTypes.cs  Coater.NodeSet2.xml  Coater.PredefinedNodes.uanodes  Coater.PredefinedNodes.xml  Coater.Types.bsd  Coater.Types.xsd  ModelDesign.csv  ModelDesign.xml
src/: OpcFunc.h  mDef.h  mJson.h  mSerial.h  mUlvac.h  main.c
